--- a/session1.Rmd
+++ b/session1.Rmd
@@ -22,6 +22,9 @@ The rationale behind alternative designs is illustrated with the goals of
 - Enhancing our credibility with the audience
 
 
-[[**slides**]](slides/slides-day1-01.html)
+[[**handout**]](slides/handouts-day1-01.pdf) I suggest you have a printed copy of this handout to write in during the workshop. We have a number of think- write-share activities that for many people work best in writing. 
+
+
+[[**slides**]](slides/slides-day1-01.html) used during the workshop. 
 
 
