--- a/references.bib
+++ b/references.bib
@@ -45,7 +45,7 @@ Use manual for software references
 }
 
 @book{Doumont:2009,
-  author    = {Jean-luc Doumont},
+  author    = {{Jean-luc} Doumont},
   year      = {2009},
   title     = {{Trees, Maps, and Theorems}},
   publisher = {{Principiae}},
@@ -61,6 +61,14 @@ Use manual for software references
   number  = {1},
   pages   = {79--91},
   url     = {doi:10.1080/10618600.2012.694762},
+}
+
+@book{Evergreen:2017,
+  author    = {{Stephanie D. H.}  Evergreen},
+  year      = {2017},
+  title     = {{Effective Data Visualization}},
+  publisher = {{Sage}},
+  address   = {Thousand Oaks, CA},
 }
 
 @article{Fortenberry+Sullivan+etal:2007,
@@ -96,7 +104,7 @@ Use manual for software references
 @article{Main+Wang+Tan:2021,
   author = {Joyce B. Main and Yanbing Wang and Li Tan},
   year   = {2021},
-  title  = {{The career outlook of engineering PhDs: Influence of postdoctoral research positions on early career salaries and the attainment of tenure-track faculty positions}},
+  title  = {{The career outlook of engineering PhDs}},
   journal      = {Journal of Engineering Education},
   volume       = {110},
   number       = {4},
