--- a/slides/slides-day2-01.Rmd
+++ b/slides/slides-day2-01.Rmd
@@ -623,7 +623,7 @@ ggplot(dt, aes(x = per_capita_gdp/1000, y = lifeExp)) +
   uniform_point_2 +  
   labs(x = "2021 GDP per capita (thousands Intl dollars)", 
        y = "Life expectancy in 2021 (years)", 
-       title = "Each point is a country") + 
+       title = "Each point is a country in 2021") + 
   scale_x_continuous(limits = c(0, 150)) +
   scale_y_continuous(breaks = seq(60, 80, 10)) +
   theme_graphclass(font_size = 20)
@@ -683,7 +683,7 @@ ggplot(dt,
              alpha = 0.8) + 
   labs(x = "2021 GDP per capita (thousands Intl dollars)", 
        y = "Life expectancy in 2021 (years)", 
-       title = "Each point is a country") + 
+       title = "Each point is a country in 2021") + 
   scale_x_continuous(limits = c(0, 150)) +
   scale_y_continuous(breaks = seq(60, 80, 10)) +
   theme_graphclass(font_size = 20) +
