--- a/references.bib
+++ b/references.bib
@@ -17,6 +17,64 @@ fields that work
 Use misc for online resources
 Use manual for software references
 
+
+
+
+
+
+Data
+
+@misc{CDC-Wonder:2022, 
+  author    = {{CDC Wonder}},
+  year      = {2022-01},
+  title     = {{Linked Birth/Infant Death Records}},
+  publisher = {{US Centers for Disease Control and Prevention}},
+  url       = {https://wonder.cdc.gov/lbd-current.html},
+}
+
+@misc{Gapminder+GDP:2022, 
+  author    = {{Gapminder Fdn.}},
+  year      = {2022-01},
+  title     = {{Gross domestic product per person adjusted for differences in purchasing power}},
+  publisher = {{Gapminder based on World Bank}},
+  url       = {https://www.gapminder.org/data/},
+}
+
+@misc{Gapminder+LifeExp:2022, 
+  author    = {{Gapminder Fdn.}},
+  year      = {2022-01},
+  title     = {{Life expectancy at birth}},
+  publisher = {{Gapminder}},
+  url       = {https://www.gapminder.org/data/},
+}
+
+@article{NASA+Snow+Ice:2017, 
+  author    = {F. Fetterer and K. Knowles and W.N. Meier and M. Savoie and A.K. Windnagel},
+  year      = {2017},
+  title     = {{Sea ice index, version 3, Sea ice extent and area organized by year}},
+  publisher = {{NASA National Snow and Ice Data Center}},
+  address   = {Boulder, Colorado},
+  url       = {https://nsidc.org/arcticseaicenews/sea-ice-tools/},
+  doi       = {https://doi.org/10.7265/N5K072F8},
+}
+
+@misc{WorldBank:2022, 
+  author    = {{World Bank}},
+  year      = {2022-01},
+  title     = {{Population total for United States}},
+  publisher = {{Federal Reserve Bank of St. Louis}},
+  url       = {https://fred.stlouisfed.org/series/POPTOTUSA647NWDB},
+}
+
+
+
+
+
+
+
+
+Books and articles
+
 @book{Cairo:2019,
   author    = {Alberto Cairo},
   year      = {2019},
@@ -152,13 +210,6 @@ Use manual for software references
   address   = {UK},
 }
 
-@misc{WorldBank:2022, 
-  author    = {{World Bank}},
-  year      = {2022-01-14},
-  title     = {{Population total for United States}},
-  publisher = {{Federal Reserve Bank of St. Louis}},
-  url   = {https://fred.stlouisfed.org/series/POPTOTUSA647NWDB},
-}
 
 
 
@@ -170,11 +221,10 @@ Use manual for software references
 
 
 
-
-
+R packages
 
 @manual{R-data.table,
- title  = {data.table: Extension of `data.frame`},
+ title  = {{data.table: Extension of `data.frame`}},
  author = {Matt Dowle and Arun Srinivasan},
  year   = {2021},
  note   = {R package version 1.14.2},
@@ -182,15 +232,23 @@ Use manual for software references
 }
   
 @Manual{R-distill,
- title  = {distill: 'R Markdown' Format for Scientific and Technical Writing},
+ title  = {{distill: 'R Markdown' Format for Scientific and Technical Writing}},
  author = {JJ Allaire and Rich Iannone and Alison {Presmanes Hill} and Yihui Xie},
  year   = {2021},
  note   = {R package version 1.3},
  url    = {https://CRAN.R-project.org/package=distill},
 }
+
+@manual{R-GDAdata,
+  title  = {{GDAdata: Datasets for the book Graphical Data Analysis with R}},
+  author = {Antony Unwin},
+  year   = {2015},
+  note   = {{R package version 0.93}},
+  url    = {https://CRAN.R-project.org/package=GDAdata},
+}
   
 @manual{R-GGally,
- title  = {GGally: Extension to 'ggplot2'},
+ title  = {{GGally: Extension to 'ggplot2'}},
  author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
  year  = {2021},
  note  = {R package version 2.1.2},
@@ -199,12 +257,20 @@ Use manual for software references
   
 @book{R-ggplot2,
  author    = {Hadley Wickham},
- title     = {ggplot2: Elegant Graphics for Data Analysis},
+ title     = {{ggplot2: Elegant Graphics for Data Analysis}},
  publisher = {Springer-Verlag New York},
  year      = {2016},
  isbn      = {978-3-319-24277-4},
  url       = {https://ggplot2.tidyverse.org},
 } 
+
+@Manual{R-graphclassmate,
+  title = {{graphclassmate: Companion materials for a course in data visualization}},
+  author  = {Richard Layton},
+  year    = {2021},
+  note    = {{R package version 0.1.0}},
+  url     = {https://github.com/graphdr/graphclassmate},
+  }
 
 @InCollection{R-knitr,
  booktitle = {Implementing Reproducible Computational Research},
